# yoyo-py

./: .gitignore  README.md  demo_audio.py  demo_interactive.py  demo_mopidy.py  demo_playlists.py  demo_voip.py  main.py  pyproject.toml  requirements.txt  test_buttons.py  test_display.py  test_echo.sh  test_hal_whisplay.py  test_incoming_call_debug.py  yoyopod.py  yoyopod_full.py
.claude/: CLAUDE.md
config/: config.example.json  contacts.yaml  voip_config.yaml  yoyopod_config.yaml
demos/: demo_mopidy.py  demo_state_machine.py  demo_voip.py  demo_yoyopod_phase1.py
docs/: DISPLAY_HAL_ARCHITECTURE.md  INPUT_HAL_ARCHITECTURE.md  INTEGRATION_PLAN.md  PHASE2_SUMMARY.md  SYSTEM_ARCHITECTURE.md  UI_RESTRUCTURE_PROPOSAL.md
scripts/: generate_test_sounds.py
tests/: __init__.py  test_phase1_state_machine.py  test_voip_registration.py
yoyopy/: __init__.py  app.py  app_context.py  state_machine.py  yoyopod_app.py
yoyopy/audio/: __init__.py  mopidy_client.py
yoyopy/config/: __init__.py  config_manager.py
yoyopy/connectivity/: __init__.py  voip_manager.py
yoyopy/power/: __init__.py
yoyopy/security/: __init__.py
yoyopy/sync/: __init__.py
yoyopy/ui/: __init__.py  audio_screen.py  display.py  display_factory.py  input_handler.py  screen_manager.py  screens.py  web_server.py
yoyopy/ui/adapters/: __init__.py  display_pimoroni.py  display_whisplay.py
yoyopy/ui/display/: __init__.py  display_factory.py  display_hal.py  display_manager.py
yoyopy/ui/input/: __init__.py  input_factory.py  input_hal.py  input_manager.py
yoyopy/utils/: logger.py
(+24 files in other folders)
